# slicer-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/skills/slicer-cli/: SKILL.md
.agents/skills/slicer-cli/references/: commands.md  dicomweb.md  errors.md  safety.md  troubleshooting.md
.claude/skills/: slicer-cli
.github/workflows/: ci.yml  release.yml
docs/: 3d-slicer-web-server-scrape.md  3d-slicer-webserver-surface-report.md  Slicer-CLI-PRD.md  Slicer-CLI-UserManual.md  TODOS.md
scripts/: extract_changelog.py
slicer_cli/: AGENTS.md  __init__.py  config.py
slicer_cli/cli/: api.py  config.py  dicom.py  doctor.py  exec_.py  gui.py  markup.py  node.py  output.py  render.py  sample.py  scene.py  status.py  system.py  volume.py
slicer_cli/cli/_internal/: __init__.py  argv.py  context.py  mrml_helpers.py
slicer_cli/client/: __init__.py  base.py  gui.py  models.py  raw.py  render.py  routes.py  sample.py  system.py
slicer_cli/client/_internal/: audit.py  exec_template.py  validators.py
slicer_cli/client/dicom/: __init__.py  mixin.py
slicer_cli/client/mrml/: __init__.py  models.py
src/slicer_cli/: AGENTS.md  config.py  output.py
src/slicer_cli/cli/: __init__.py  api.py  app.py  config.py  dicom.py  doctor.py  exec_.py  gui.py  markup.py  output.py  render.py  sample.py  scene.py  status.py  system.py  volume.py
src/slicer_cli/cli/_internal/: context.py  mrml_helpers.py  safety.py  stub.py
src/slicer_cli/cli/mrml/: __init__.py  _helpers.py  markup.py  node.py  sample.py  scene.py  volume.py
src/slicer_cli/client/: _dicom_tags.py  _http.py  base.py  dicom.py  errors.py  markup.py  models.py  mrml.py  raw.py  render.py  routes.py  sample.py  system.py  volume.py
src/slicer_cli/client/_internal/: __init__.py  audit.py  dicom_tags.py  exec.py  http.py  id_helpers.py
src/slicer_cli/client/dicom/: mixin.py  models.py
src/slicer_cli/client/markup/: __init__.py  mixin.py  models.py
src/slicer_cli/client/models/: _base.py  (+6 more)
tests/: AGENTS.md  conftest.py
tests/integration/: .env.example  conftest.py  test_destructive_live.py  test_dicom_live.py  test_exec_live.py  test_export_live.py  test_gui_live.py  test_markup_live.py  test_phase1_destructive.py  test_phase1_load.py  test_phase1_readonly.py  test_render_live.py  test_status_live.py
tests/unit/: test_api.py  test_audit.py  test_config.py  test_dicom.py  test_dicom_tags.py  test_doctor.py  test_exec.py  test_exec_command.py  test_extract_changelog.py  test_gui.py  test_markup.py  test_output.py  test_render.py  test_routes.py  test_safety.py  test_status.py  test_status_offline.py  test_system.py
tests/unit/mrml/: test_helpers.py  test_node.py  test_sample.py  test_scene.py  test_volume.py
(+2 files in other folders)
