[project]
name = "slicer-cli"
version = "0.1.0"
description = "Agent-first CLI for 3D Slicer's in-process HTTP server (port 2016)"
readme = "README.md"
authors = [
    { name = "Lightbridge-KS", email = "ki11ip0.s.a.s@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["3d-slicer", "medical-imaging", "dicom", "mrml", "cli", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
]

[project.scripts]
slicer-cli = "slicer_cli.cli.app:main"
slcli = "slicer_cli.cli.app:main"

[project.urls]
Documentation = "https://github.com/Lightbridge-KS/slicer-cli"
Source = "https://github.com/Lightbridge-KS/slicer-cli"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "N",      # pep8-naming
]
ignore = [
    "E501",   # line-length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802"]   # test_X functions

[tool.ruff.lint.isort]
combine-as-imports = true   # keep aliased imports on one block, not one-per-line

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
disallow_untyped_defs = true
files = ["src/slicer_cli", "tests"]

[[tool.mypy.overrides]]
module = ["respx.*", "pytest_httpx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running 3D Slicer with WebServer enabled (env SLICER_INTEGRATION=1)",
    "requires_orthanc: requires a local Orthanc with DICOMweb plugin at http://localhost:8042",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
